Update SQL_Tricy.md